Add code documentation

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="description" content="Kalafar (MW3 Server Launcher) program remake for web">
     <meta name="keywords" content="kalafar, mw3, cod, Call of Duty, server launcher">
     <meta name="author" content="Matej Jurik &lt;jurik.matejw@gmail.com&gt;">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
     <!--  JS Libraries -->
-    <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+<!--    <script src="node_modules/popper.js/dist/popper.min.js"></script>-->
+<!--    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
+<!--    <script src="node_modules/jquery/dist/jquery.min.js"></script>-->
     <!--  My compiled code  -->
-    <script src="app/static/js/main.js"></script>
+<!--    <script src="app/static/js/main.js"></script>-->
 
     <!--  CSS Styles  -->
-    <link rel="stylesheet" href="app/static/css/main.css" type="text/css"/>
+<!--    <link rel="stylesheet" href="app/static/css/main.css" type="text/css"/>-->
 
     <title>Kalafar.com</title>
 
